--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,6 @@
 *.app
 *.i*86
 *.x86_64
-*.hex
 
 # Debug files
 *.dSYM/
@@ -50,3 +49,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+*.PRG
+*.BIN
+*.list
